tests/valid/Variable_Declaration/Variable_Declaration.vyp
void main(void) {
    int a, b;
    a = 5;
    b = 10;
    print("a: ", a, ", b: ", b, "\n");
}
