tests/invalid/Expressions/Missing_Operator.vyp
void main(void) {
    int a;
    a = 5 10;  // Missing operator between operands
}
